# Distributed-Systems

./: .gitignore
middleware_homework/I2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ice_example.sln  main.vcxproj  main.vcxproj.filters
middleware_homework/I2/Ice/slice/: calculator.ice
middleware_homework/I2/include/Glacier2/: Metrics.h  PermissionsVerifier.h  PermissionsVerifierF.h  Router.h  RouterF.h  SSLInfo.h  Session.h
middleware_homework/I2/include/Ice/: EventLoggerMsg.h
middleware_homework/I2/include/IceBox/: IceBox.h
middleware_homework/I2/include/IceGrid/: Admin.h  Descriptor.h  Exception.h  FileParser.h  PluginFacade.h  Registry.h  Session.h  UserAccountMapper.h
middleware_homework/I2/include/IcePatch2/: FileInfo.h  FileServer.h
middleware_homework/I2/include/IceStorm/: IceStorm.h  Metrics.h
middleware_homework/I2/lib/Win32/Debug/: glacier237++11d.lib  glacier237d.lib  ice37++11d.lib  ice37d.lib  icebox37++11d.lib  icebox37d.lib  icediscovery37++11d.lib  icediscovery37d.lib  icegrid37++11d.lib  icegrid37d.lib  icelocatordiscovery37++11d.lib  icelocatordiscovery37d.lib  icepatch237d.lib  icessl37++11d.lib  icessl37d.lib  icestorm37++11d.lib  icestorm37d.lib
middleware_homework/I2/lib/Win32/Release/: glacier237++11.lib  glacier237.lib  ice37++11.lib  ice37.lib  icebox37++11.lib  icebox37.lib  icediscovery37++11.lib  icediscovery37.lib  icegrid37++11.lib  icegrid37.lib  icelocatordiscovery37++11.lib  (+6 more)
middleware_homework/I2/src/: main.cpp
(+250 files in other folders)
